syntax = "proto3";

package grpc-web;

service GrpcWebService {
    rpc Echo (EchoRequest) returns (EchoResponse);
    rpc DoMath (MathRequest) returns (MathResponse);
}

message EchoRequest {
    string message = 1;
}

message EchoResponse {
    string message = 1;
}

enum Operation {
    ADD = 0;
    SUBTRACT = 1;
    MULTIPLY = 2;
    DIVIDE = 3;
}

message MathRequest {
    Operation operation = 1;
    double number1 = 2;
    double number2 = 3;
}

message MathResponse {
    double result = 1;
}
